# snowflake-old

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  convert.py
include/snowflake/: model.hpp
include/snowflake/layer/: activation.hpp  dense.hpp  gru.hpp  lstm.hpp
include/snowflake/util/: load.hpp  table.hpp
playground/: CMakeLists.txt  build.sh
playground/include/: gru_amp_gain.hpp  lstm_6505.hpp  lstm_zendrive.hpp
playground/src/: main.cpp
